Added support for java records